# client2server

./: Cargo.toml  README.MD
client/: Cargo.toml
client/src/: app.rs  client.rs  main copy.rs  main.rs  service.rs
packet/: Cargo.toml
packet/packet-macro/: Cargo.toml
packet/packet-macro/src/: lib.rs
packet/src/: lib.rs
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml
server/src/: agent.rs  app.rs  client.rs  main copy.rs  main.rs
